# open_web_retrieval

./: .gitignore  AGENTS.md  CLAUDE.md  KNOWLEDGE.md  Makefile  README.md  meta-process.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: gate-edit.sh  track-reads.sh
.github/workflows/: test.yml
docs/: REQUIREMENTS.md  ROADMAP.md  SOTA_RESEARCH.md  wiki_manifest.yaml
docs/notebooks/: 01_grounded_research_followups.ipynb  02_tavily_provider_parity.ipynb  03_exa_provider_parity.ipynb  05_exa_retrieval_instruction_surface.ipynb
docs/ops/: CAPABILITY_DECOMPOSITION.md
docs/plans/: 01_fetch_resilience_and_crawl4ai.md  02_robust_fetch.md  03_enhanced_extraction.md  04_hardening_and_v1_prep.md  06_autonomous_24h_execution.md  07_review_fixes.md  08_async_dedup.md  09_grounded_research_followups.md  10_tavily_provider_parity.md  11_exa_provider_parity.md  16_exa_retrieval_instruction_surface.md  CLAUDE.md
meta-process/templates/: agents.md.template
scripts/: check_doc_coupling.py  check_markdown_links.py  check_required_reading.py  relationships.yaml  sync_plan_status.py
scripts/meta/: check_agents_sync.py  check_doc_coupling.py  file_context.py  hook_log.py  render_agents_md.py  validate_plan.py
src/open_web_retrieval/: __init__.py  async_fetch.py  cache.py  client.py  embeddings.py  exceptions.py  fetch_extract.py  models.py  observability.py
src/open_web_retrieval/adapters/: base.py  brave.py  exa.py  openalex.py  searxng.py  tavily.py  tools.py
tests/: conftest.py  test_adapter_tools.py  test_adapters.py  test_async.py  test_cache.py  test_client.py  test_fetch_extract.py  test_models.py
