[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-web-retrieval"
version = "0.1.0"
description = "Shared open-web retrieval substrate for search, fetch, and extraction."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
extract = ["trafilatura>=1.12"]
render = ["playwright>=1.45"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["open_web_retrieval*"]
